@@ -13,6 +13,9 @@ Kristall Changelog
 - Added support for file:// scheme
 - Added status bar with loading time, file size and mime type
 - Added support for command line arguments
+- Added option to render all text/* documents as plain text.
+- Added option to render gopher maps with icons *OR* text only
+- Fixed bug: Correct URL escaping for gemini requests.
 
 == 0.1
 - Initial release
